# colorcpp

./: .dockerignore  .gitignore  .mailmap  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  Dockerfile  README.md  docker-compose.yml  requirements-docs.txt  test_all_models.cpp
.github/workflows/: ci.yml  docker-publish.yml
benchmarks/: CMakeLists.txt  benchmark_accessibility.cpp  benchmark_blend.cpp  benchmark_compare.cpp  benchmark_conversion.cpp  benchmark_delta_e.cpp  benchmark_gamut_palette.cpp  benchmark_harmony.cpp  benchmark_interpolate.cpp  benchmark_io.cpp  benchmark_palette.cpp  benchmark_simd_candidates.cpp  benchmark_vision.cpp
cmake/: colorcpp.pc.in  colorcppConfig.cmake.in
docs/: conf.py  index.rst
docs/reference/: accessibility.rst  advanced_scales.rst  ansi.rst  api_conventions.rst  binary_io.rst  blend.rst  color_spaces.rst  color_temperature.rst  compare.rst  conversion.rst  css_color.rst  delta_e.rst  gamut.rst  gradient.rst  harmony.rst  index.rst  interpolate.rst  io.rst  literals.rst  palette.rst  random.rst  serialization.rst  simd.rst  vision.rst
doxygen/: Doxygen.in
examples/: CMakeLists.txt  accessibility_example.cpp  ansi_example.cpp  apca_example.cpp  blend_example.cpp  cast_example.cpp  color_temperature_example.cpp  compare_example.cpp  css_example.cpp  delta_e_example.cpp  display_p3_example.cpp  flow_example.cpp  gamut_example.cpp  gradient_example.cpp  harmony_example.cpp  interpolate_example.cpp  interpolation_example.cpp  io_example.cpp  msgpack_example.cpp  palette_example.cpp  random_example.cpp  serialization_example.cpp  vision_example.cpp
include/: color.hpp
include/color/: color.hpp
include/color/conversion/: cmyk_to_hsl.hpp  cmyk_to_hsv.hpp  cmyk_to_rgb.hpp  conversion.hpp  hsl_to_cmyk.hpp  hsl_to_hsv.hpp  hsl_to_rgb.hpp  hsv_to_cmyk.hpp  hsv_to_hsl.hpp  hsv_to_rgb.hpp  rgb_to_cmyk.hpp  rgb_to_hsl.hpp  rgb_to_hsv.hpp
include/color/core/: cmyk.hpp  color.hpp  constants.hpp  core.hpp  hsl.hpp  hsv.hpp  io.hpp  rgb.hpp
include/color/literals/: literals.hpp
include/color/operations/: adjust.hpp  blend.hpp  color_cast.hpp  filter.hpp  io.hpp  operations.hpp  random.hpp
include/color/operations/generation/: random.hpp
include/color/palettes/: web.hpp
include/color/traits/: concepts.hpp
include/color/utils/: literals.hpp  maths.hpp
include/colorcpp/: colorcpp.hpp
include/colorcpp/algorithms/: accessibility.hpp  algorithms.hpp  color_temperature.hpp  delta_e.hpp  gamut.hpp  gradient.hpp  harmony.hpp  vision.hpp
include/colorcpp/algorithms/accessibility/: apca.hpp  wcag.hpp
include/colorcpp/algorithms/delta_e/: de2000.hpp  de76.hpp  de94.hpp  helpers.hpp  oklab.hpp  simd.hpp
include/colorcpp/algorithms/gamut/: details.hpp  distance.hpp  gamut.hpp  mapping_result.hpp  multi_colorspace.hpp  preserve.hpp  srgb.hpp
include/colorcpp/algorithms/gradient/: angular.hpp  box.hpp  details.hpp  diamond.hpp  easing.hpp  linear.hpp  presets.hpp  radial.hpp  sequence.hpp  stepped.hpp  stops.hpp
include/colorcpp/algorithms/harmony/: assess.hpp  correct.hpp  rules.hpp  scheme.hpp  suggest.hpp  weights.hpp
include/colorcpp/algorithms/palette/: advanced_scales.hpp  details.hpp  families.hpp  rainbow.hpp  scales.hpp
include/colorcpp/algorithms/vision/: achromatopsia.hpp  details.hpp  deuteranopia.hpp  helpers.hpp  machado.hpp  protanopia.hpp  simd.hpp  tritanopia.hpp
include/colorcpp/core/: cielab.hpp  cmyk.hpp  color_base.hpp  concepts.hpp  constants.hpp  core.hpp  css_color.hpp  display_p3.hpp  hsl.hpp  hsv.hpp  hwb.hpp  io.hpp  lab.hpp  linear_rgb.hpp  oklab.hpp  palette_set.hpp  rgb.hpp  xyz.hpp
include/colorcpp/detail/: simd.hpp
include/colorcpp/io/: ansi.hpp  binary_io.hpp  css.hpp  io.hpp  literals.hpp  serialization.hpp
include/colorcpp/io/binary_io/: cube.hpp  details.hpp  lut.hpp
include/colorcpp/io/css/: color_function.hpp  context.hpp  details.hpp  device_cmyk.hpp  display_p3.hpp  format.hpp  hex.hpp  hsl.hpp  hwb.hpp  lab.hpp  lch.hpp  named_colors.hpp  oklab.hpp  oklch.hpp  parse_detail.hpp  parse_public.hpp  parse_templates.hpp  relative_color.hpp  rgb.hpp
include/colorcpp/io/literals/: cmyk.hpp  details.hpp  hsl.hpp  hsv.hpp  hwb.hpp  oklab.hpp  rgb.hpp
include/colorcpp/io/serialization/: details.hpp  json.hpp  msgpack.hpp  traits.hpp
include/colorcpp/literals/: literals.hpp
include/colorcpp/operations/: accessibility.hpp  adjust.hpp  blend.hpp  color_cast.hpp  compare.hpp  conversion.hpp  delta_e.hpp  filter.hpp  flow.hpp  gamut.hpp  harmony.hpp  interpolate.hpp  interpolation.hpp  operations.hpp  palette.hpp  random.hpp  vision.hpp
include/colorcpp/operations/blend/: algorithms.hpp  blend.hpp  details.hpp  mode.hpp  non_separable.hpp  simd.hpp
include/colorcpp/operations/compare/: epsilon.hpp  equal.hpp  exact.hpp  perceptual.hpp  relative.hpp
include/colorcpp/operations/conversion/: cast_impl.hpp  conversion.hpp  (+7 more)
include/colorcpp/palettes/: web.hpp
include/colorcpp/parsers/: css_color.hpp
include/colorcpp/traits/: basic_color.hpp  channel_tags.hpp  channel_traits.hpp  concepts.hpp  model_tags.hpp  model_traits.hpp
include/colorcpp/utils/: maths.hpp
tests/: CMakeLists.txt  test_api_contract.cpp  test_literals.cpp  test_random.cpp
tests/algorithms/: test_accessibility.cpp  test_color_temperature.cpp  test_delta_e.cpp  test_delta_e_simd.cpp  test_gamut.cpp  test_gradient.cpp  test_harmony.cpp  test_vision.cpp  test_vision_simd.cpp
tests/core/: test_cielab.cpp  test_cmyk.cpp  test_css_color.cpp  test_display_p3.cpp  test_hsl.cpp  test_hsla.cpp  test_hsv.cpp  test_hwb.cpp  test_linear_rgb.cpp  test_oklab.cpp  test_rgb.cpp  test_rgba.cpp  test_xyz.cpp
tests/io/: test_ansi.cpp  test_binary_io.cpp  test_css.cpp  test_literals.cpp  test_named.cpp  test_serialization.cpp
tests/literals/: test_literals.cpp
tests/operations/: test_accessibility.cpp  test_blend.cpp  test_blend_simd.cpp  test_compare.cpp  test_conversion.cpp  test_delta_e.cpp  test_flow.cpp  test_gamut.cpp  test_harmony.cpp  test_interpolate.cpp  test_palette.cpp  test_random.cpp  test_vision.cpp
(+58 files in other folders)
